==> Smoke666D/DASH_LUA_VERSION/DRIVER/hal_timers_ch32.c <==
#include "hal_timers.h"

static void vTimerInitRCC(TimerName_t TimerName)
{
    if ((TimerName == TIMER1) || (TimerName > TIMER7))
    {
#if CORE == WCH32V3
        switch (TimerName)
        {
            case TIMER1:
#endif
                HAL_InitAPB2(RCC_APB2Periph_TIM1);
#if CORE == WCH32V3
                break;
            case TIMER8:
                HAL_InitAPB2(RCC_APB2Periph_TIM8);
                break;
            case TIMER9:
                HAL_InitAPB2(RCC_APB2Periph_TIM9);
                break;
            default:
                HAL_InitAPB2( RCC_APB2Periph_TIM10);
                break;
        }
#endif
    }
    else
    {
        switch (TimerName)
        {
            case TIMER2:
                HAL_InitAPB1(RCC_APB1Periph_TIM2);
                break;
            case TIMER3:
                HAL_InitAPB1(RCC_APB1Periph_TIM3);
                break;
            case TIMER4:
                HAL_InitAPB1( RCC_APB1Periph_TIM4);
                break;
#if CORE == WCH32V3
            case TIMER5:
                HAL_InitAPB1(RCC_APB1Periph_TIM5);
                break;
            case TIMER6:
                HAL_InitAPB1( RCC_APB1Periph_TIM6);
                break;
            default:
                HAL_InitAPB1(RCC_APB1Periph_TIM7);
                break;
#endif
        }

    }
}

INIT_FUNC_LOC void HAL_TIMER_PWMTimersInit(TimerName_t TimerName , uint32_t freq_in_hz, uint32_t Period, uint8_t channel)
{
	 TIM_OCInitTypeDef TIM_OCInitStructure={0};
	 config[TimerName].Period = Period;
	 config[TimerName].Div = (getTimerFreq() /(freq_in_hz*Period));
	 config[TimerName].ClockDiv = 0;
	 HW_TIMER_BaseTimerInit(TimerName);
	 TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM2;
	 TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
	 TIM_OCInitStructure.TIM_Pulse = Period;
	 TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;
	 if (channel &  TIM_CHANNEL_1)
	 {
		 TIM_OC1Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC1PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_2)
	 {
	     TIM_OC2Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC2PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_3)
	 {
		TIM_OC3Init( timers[TimerName], &TIM_OCInitStructure );
	    TIM_OC3PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_4)
	 {
		 TIM_OC4Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC4PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 timers[TimerName]->CTLR1 |= TIM_ARPE;
	 timers[TimerName]->BDTR |= TIM_MOE;
}

INIT_FUNC_LOC  void HAL_TIMER_PWMTimersInit(TimerName_t TimerName , uint32_t freq_in_hz, uint32_t Period, uint8_t channel)
{
     TIM_OCInitTypeDef TIM_OCInitStructure={0};

     HAL_TIMER_BaseTimerInit(TimerName , 0, ( getTimerFreq() /freq_in_hz),  Period );
     TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM2;
     TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
     TIM_OCInitStructure.TIM_Pulse = Period;
     TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;
     if (channel &  TIM_CHANNEL_1)
     {
         TIM_OC1Init( timers[TimerName], &TIM_OCInitStructure );
         TIM_OC1PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
     }
     if (channel &  TIM_CHANNEL_2)
     {
         TIM_OC2Init( timers[TimerName], &TIM_OCInitStructure );
         TIM_OC2PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
     }
     if (channel &  TIM_CHANNEL_3)
     {
        TIM_OC3Init( timers[TimerName], &TIM_OCInitStructure );
        TIM_OC3PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
     }
     if (channel &  TIM_CHANNEL_4)
     {
         TIM_OC4Init( timers[TimerName], &TIM_OCInitStructure );
         TIM_OC4PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
     }
     timers[TimerName]->CTLR1 |= TIM_ARPE;
     timers[TimerName]->BDTR |= TIM_MOE;
}
