==> Smoke666D/FreeModbusProjetc/HAL/hal_timers.c <==
#include "hal_timers.h"
#include "hal_irq.h"

static void vTimerInitRCC(TimerName_t TimerName)
{
    u32 timers_mask;
    if ((TimerName == TIMER1) || (TimerName > TIMER7))
    {
#if MCU== CH32V3
        switch (TimerName)
        {
            case TIMER1:
#endif
                timers_mask = RCC_APB2Periph_TIM1;
#if MCU==CH32V3
                break;
            case TIMER8:
                timers_mask = RCC_APB2Periph_TIM8;
                break;
            case TIMER9:
                timers_mask = RCC_APB2Periph_TIM9;
                break;
            default:
                timers_mask = RCC_APB2Periph_TIM10;
                break;
        }
#endif
        RCC->APB2PRSTR |= timers_mask;
        RCC->APB2PRSTR &= ~timers_mask;
        RCC->APB2PCENR |= timers_mask;

    }
    else
    {
        switch (TimerName)
        {
            case TIMER2:
                timers_mask = RCC_APB1Periph_TIM2;
                break;
            case TIMER3:
                timers_mask = RCC_APB1Periph_TIM3;
                break;
            case TIMER4:
                timers_mask = RCC_APB1Periph_TIM4;
                break;
#if MCU == CH32V3
            case TIMER5:
                timers_mask = RCC_APB1Periph_TIM5;
                break;
            case TIMER6:
                timers_mask = RCC_APB1Periph_TIM6;
                break;
            default:
                timers_mask = RCC_APB1Periph_TIM7;
                break;
#endif
        }
        RCC->APB1PRSTR |= timers_mask;
        RCC->APB1PRSTR &= ~timers_mask;
        RCC->APB1PCENR |= timers_mask;
    }
}

void HAL_TIMER_PWMTimersInit(TimerName_t TimerName , uint32_t freq_in_hz, uint32_t Period, uint8_t channel)
{
	 TIM_OCInitTypeDef TIM_OCInitStructure={0};
	 vTimerInitRCC(TimerName) ;
	 config[TimerName].Period = Period;
	 config[TimerName].Div = (72000000U /freq_in_hz);
	 config[TimerName].ClockDiv = 0;
	 HW_TIMER_BaseTimerInit(TimerName);
	 TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM2;
	 TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
	 TIM_OCInitStructure.TIM_Pulse = Period;
	 TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;
	 if (channel &  TIM_CHANNEL_1)
	 {
		 TIM_OC1Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC1PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_2)
	 {
	     TIM_OC2Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC2PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_3)
	 {
		TIM_OC3Init( timers[TimerName], &TIM_OCInitStructure );
	    TIM_OC3PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_4)
	 {
		 TIM_OC4Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC4PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 timers[TimerName]->CTLR1 |= TIM_ARPE;
	 timers[TimerName]->BDTR |= TIM_MOE;
}

void HAL_TIMER_PWMTimersInit(TimerName_t TimerName , uint32_t freq_in_hz, uint32_t Period, uint8_t channel)
{
    TMR_OCConfig_T OCcongigStruct;
    uint32_t Freq = getTimerFreq( TimerName );
    vTimerInitRCC(TimerName) ;
    config[TimerName].Period = Period;
    config[TimerName].Div = (Freq /freq_in_hz);
    HW_TIMER_BaseTimerInit(TimerName);
    OCcongigStruct.mode = TMR_OC_MODE_PWM1;
    OCcongigStruct.polarity = TMR_OC_POLARITY_HIGH;
    OCcongigStruct.outputState = TMR_OC_STATE_ENABLE;
    OCcongigStruct.idleState = TMR_OC_IDLE_STATE_RESET;
    OCcongigStruct.nIdleState = TMR_OC_NIDLE_STATE_RESET;
    OCcongigStruct.nPolarity = TMR_OC_NPOLARITY_HIGH;
    OCcongigStruct.outputNState = TMR_OC_NSTATE_DISABLE;
    OCcongigStruct.pulse = Period;// + 1;
    if (channel &  TIM_CHANNEL_1)
    { TMR_ConfigOC1(timers[TimerName], &OCcongigStruct);
      TMR_ConfigOC1Fast(timers[TimerName],TMR_OC_FAST_ENABLE);
      TMR_ConfigOC1Preload(timers[TimerName], TMR_OC_PRELOAD_ENABLE);
      TMR_DisableCCxChannel(timers[TimerName],TMR_CHANNEL_1); }
    if (channel &  TIM_CHANNEL_2)
    { TMR_ConfigOC2(timers[TimerName], &OCcongigStruct);
      TMR_ConfigOC2Fast(timers[TimerName],TMR_OC_FAST_ENABLE);
      TMR_ConfigOC2Preload(timers[TimerName], TMR_OC_PRELOAD_ENABLE);
      TMR_DisableCCxChannel(timers[TimerName],TMR_CHANNEL_2);}
    if (channel &  TIM_CHANNEL_3)
    { TMR_ConfigOC3(timers[TimerName], &OCcongigStruct);
      TMR_ConfigOC3Fast(timers[TimerName],TMR_OC_FAST_ENABLE);
      TMR_ConfigOC3Preload(timers[TimerName], TMR_OC_PRELOAD_ENABLE);
      TMR_DisableCCxChannel(timers[TimerName],TMR_CHANNEL_3); }
    if (channel &  TIM_CHANNEL_4)
    { TMR_ConfigOC4(timers[TimerName], &OCcongigStruct);
      TMR_ConfigOC4Fast(timers[TimerName],TMR_OC_FAST_ENABLE);
      TMR_ConfigOC4Preload(timers[TimerName], TMR_OC_PRELOAD_ENABLE);
      TMR_DisableCCxChannel(timers[TimerName],TMR_CHANNEL_4); }
    TMR_EnableAutoReload(timers[TimerName]);
    TMR_Enable(timers[TimerName]);
    TMR_EnablePWMOutputs(timers[TimerName]);


}

static void vTimerInitRCC(TimerName_t TimerName)
{
    switch (TimerName)
    {
        case TIMER1:
            RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_TMR1);
            break;
        case TIMER2:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR2);
            break;
        case TIMER3:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR3);
            break;
        case TIMER4:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR4);
            break;
        case TIMER5:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR5);
            break;
        case TIMER6:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR6);
             break;
        case TIMER7:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR7);
             break;
        case TIMER8:
            RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_TMR8);
             break;
        case TIMER9:
            RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_TMR9);
             break;
        case TIMER10:
            RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_TMR10);
             break;
        case TIMER11:
            RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_TMR11);
             break;
        case TIMER12:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR12);
             break;
        case TIMER13:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR13);
             break;
        case TIMER14:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR14);
             break;
        default:
            break;
    }
}
